# narrux_copilog

./: .gitignore  PLAN.md  narrux_copilot_build_plan.md
aitrate-agent/: .env.example  .gitignore  .importlinter  Dockerfile  README.md  __init__.py  config.py  debug_output.txt  docker-compose.yml  pyproject.toml
aitrate-agent/api/: __init__.py  auth.py  main.py  middleware.py  routes.py  streaming.py
aitrate-agent/api/routes/: chat.py  health.py
aitrate-agent/audit/: __init__.py  logger.py  models.py
aitrate-agent/config/: settings.py
aitrate-agent/db/: __init__.py  models.py  session.py
aitrate-agent/eval/: __init__.py  adversarial.py  adversarial.yaml  e2e_eval.py  pillar_a_questions.yaml  pillar_b_questions.yaml  pillar_c_questions.yaml  retrieval_eval.py
aitrate-agent/eval/questions/: __init__.py  pillar_a.json  pillar_b.json
aitrate-agent/frontend/: index.html
aitrate-agent/frontend-next/: package.json  tailwind.config.ts
aitrate-agent/frontend-next/app/: globals.css  layout.tsx  page.tsx
aitrate-agent/frontend-next/components/: ChatPanel.tsx  Citations.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  Sidebar.tsx  SidebarPanel.tsx  TopBar.tsx  Welcome.tsx
aitrate-agent/frontend-next/lib/: api.ts  types.ts
aitrate-agent/migrations/: init.sql
aitrate-agent/orchestration/: __init__.py  agent.py  llm_client.py  pydantic_ai_adapter.py
aitrate-agent/prompts/: citation_enforcement.md  f01_strategy_explainer.md  f02_backtest_interpreter backup.md  f02_backtest_interpreter.md  f03_tsi_scorer.md  f04_parameter_recommender.md  f05_drift_monitor.md  system_v1.0.md  system_v1_0.md
aitrate-agent/retrieval/: __init__.py  citation.py  embeddings.py  ingestion.py  reranker.py  vector_store.py
aitrate-agent/scripts/: __init__.py  ingest.py  ingest_kb.py  run_eval.py
aitrate-agent/tests/: __init__.py  conftest.py
aitrate-agent/tests/unit/: test_ingestion.py  test_schemas.py  test_tsi_engine.py
aitrate-agent/tools/: __init__.py  backtest_parser.py  drift_analyzer.py  kb_lookup.py  knowledge_base.py  leverage_engine.py  portfolio_metrics.py  robustness_engine.py  schemas.py  trade_db_reader.py  tsi_engine.py
aitrate-agent/validation/: __init__.py  citation_enforcer.py  output_validator.py  schema_validator.py
