[project]
name = "aitrate-agent"
version = "0.1.0"
description = "aiTrate Co-Pilot — AI Agent for NARRUX trading platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary — NARRUX Group" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # LLM
    "anthropic>=0.40.0",
    "pydantic-ai>=0.0.14",

    # Embeddings & retrieval
    "voyageai>=0.3.0",
    "pgvector>=0.3.0",

    # Database (asyncpg — no ORM)
    "asyncpg>=0.30.0",

    # Cache
    "redis>=5.0.0",

    # Data processing
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # Validation & schemas
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Observability
    "langfuse>=2.50.0",
    "structlog>=24.0.0",

    # Utilities
    "tenacity>=9.0.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
