[project]
name = "narrux-aitrate-copilot"
version = "0.1.0"
description = "NARRUX aiTrate Co-Pilot — RAG-based trading strategy co-pilot"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary — NARRUX Group" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Agent framework
    "pydantic-ai>=0.0.14",

    # LLM
    "anthropic>=0.36.0",

    # Embeddings & retrieval
    "voyageai>=0.3.0",
    "pgvector>=0.3.0",

    # Database (psycopg v3)
    "psycopg[binary,pool]>=3.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",

    # Cache / broker
    "redis>=5.0.0",
    "arq>=0.26.0",

    # Validation & schemas
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",

    # Document processing
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",

    # Observability
    "langfuse>=2.0.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "structlog>=24.0.0",

    # Eval
    "ragas>=0.2.0",

    # Utilities
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "python-multipart>=0.0.12",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Config & tokenization
    "pyyaml>=6.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "import-linter>=2.1",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
