[project]
name = "aitrate-agent"
version = "0.1.0"
description = "NARRUX aiTrate Co-Pilot — RAG-based AI agent for quantitative trading"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    # Agent framework
    "pydantic-ai>=0.0.14",
    # LLM clients
    "anthropic>=0.42",
    # Embeddings & reranker
    "voyageai>=0.3",
    # Vector store
    "qdrant-client>=1.12",
    # Data validation
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    # Structured logging
    "structlog>=24.1",
    # Token counting
    "tiktoken>=0.5",
    # HTTP client
    "httpx>=0.26",
    # Retry logic
    "tenacity>=8.2",
    # Document parsing
    "python-docx>=1.1",
    "openpyxl>=3.1",
    # Observability
    "langfuse>=2.0",
    "opentelemetry-api>=1.22",
    "opentelemetry-sdk>=1.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
    "import-linter>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "__init__.py",
    "config.py",
    "api",
    "audit",
    "orchestration",
    "prompts",
    "retrieval",
    "tools",
    "validation",
    "scripts",
    "migrations",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
